integration_tests/manifests/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      hostname: minio-e2e
      containers:
        - name: minio
          image: quay.io/minio/minio
          args:
            - server
            - /data
            - "--console-address"
            - ":9123"
          ports:
            - containerPort: 9000
            - containerPort: 9123
          livenessProbe:
            httpGet:
              path: /
              port: 9123
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 9123
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9123
      targetPort: 9123
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-node-port
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30043
  type: NodePort
