integration_tests/manifests/scylladb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scylla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scylla
  template:
    metadata:
      labels:
        app: scylla
    spec:
      containers:
        - name: scylla
          image: scylladb/scylla
          command: ["scylla"]
          args:
            - "--rpc-address"
            - "0.0.0.0"
            - "--broadcast-rpc-address"
            - "127.0.0.1"
            - "--smp"
            - "1"
            - "--developer-mode=1"
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - '[ "$(nodetool statusgossip)" = "running" ]'
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          volumeMounts:
            - name: scylla-conf
              mountPath: /conf/scylla.yaml
              subPath: scylla.yaml
      volumes:
        - name: scylla-conf
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: scylla
spec:
  selector:
    app: scylla
  ports:
    - name: cql
      port: 9042
      targetPort: 9042
  type: ClusterIP
